# AVCamera

./: .gitignore  AVCamera.sln  CMakeLists.txt  README.md
AVCamera/: AVCamera.cpp  AVCamera.csproj  AVCamera.h  AVCamera.vcxproj  AVCameraDlg.cpp  AVCameraDlg.h  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ReadMe.txt  stdafx.h
AVCamera/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
VideoMgr/: AssemblyInfo.cpp  Camera.cpp  Camera.h  Filter.cpp  Filter.h  H264Writer.cpp  H264Writer.h  ReadMe.txt  Stdafx.cpp  Stdafx.h  VideoMgr.cpp  VideoMgr.h  VideoMgr.vcxproj  VideoMgr.vcxproj.filters  util.h
VideoMgr/include/: camera.hpp  h264writer.hpp  util.hpp
gui/qt5/: CMakeLists.txt  avcamera.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qvideowidget.cpp  qvideowidget.hpp
gui/win32/: AVCamera.rc  AVCamera.vcxproj  AVCamera.vcxproj.filters  AVCameraDlg.cpp  AVCameraDlg.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h  win32.cpp  win32.h  win32.rc  win32.vcxproj  win32.vcxproj.filters
gui/win32/res/: AVCamera.rc2  win32.rc2
include/ffmpeg/libavutil/: common.h
lib/ffmpeg/: avcodec-56.def  avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
videomgr/: CMakeLists.txt  Camera.cpp  Camera.h  Filter.h  H264Writer.cpp  H264Writer.h  Stdafx.h  VideoMgr.vcxproj  VideoMgr.vcxproj.filters  camera.cpp  camera.h  filter.cpp  filter.h  h264writer.cpp  h264writer.h  util.h
videomgr/include/: camera.h  camera.hpp  util.h
videomgr/src/: camera.cpp  filter.cpp  h264writer.cpp
